--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -60,7 +60,7 @@ main {
 }
 
 .map-container-ini {
-    flex: 11;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,10 +94,10 @@ main {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    padding: 10px;
+    padding: 10px 15px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -113,11 +113,6 @@ main {
 }
 
 .info-card-ini p {
-    display: none;
     color: #333;
     font-size: 0.9em;
-}
-
-.info-card-ini img {
-    width: 20px;
 }
