--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -40,7 +40,7 @@ header div input {
     align-items: center;
     width: 100%;
     gap: 10px;
-    padding: 10px 0; 
+    padding: 10px 0;
 }
 
 #searchBtn {
@@ -60,33 +60,52 @@ main {
 }
 
 .map-container-ini {
-    flex: 1;
+    flex: 11;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2%;
-}
-.side-panel {
-    flex: 1;
-    background-color: #f5f5f5;
+    transition: flex 0.8s ease;
 }
 
 #map {
     width: 95%;
-    height: 500px;
+    height: 690px;
     border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transition: height 0.6s ease;
 }
 
-.side-panel {
+#graficoContainer {
+    display: none;
+    width: 95%;
+    margin-top: 20px;
+    height: 500px;
+}
+
+#graficoContainer canvas {
+    height: 100% !important;
+    max-height: 100% !important;
+}
+
+body.grafico-ativo #map {
+    height: 200px;
+}
+
+body.grafico-ativo #graficoContainer {
+    display: block;
+}
+
+.side-panel-ini {
     flex: 1;
     background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 2% 1%;
     gap: 12px;
     overflow-y: auto;
+    transition: all 0.6s ease;
 }
 
 .info-card-ini {
@@ -97,7 +116,8 @@ main {
     padding: 10px 15px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -113,6 +133,61 @@ main {
 }
 
 .info-card-ini p {
+    display: none;
     color: #333;
     font-size: 0.9em;
+}
+
+.info-card-ini img {
+    width: 35px;
+    margin-bottom: 6px;
+}
+
+body.dados-carregados .map-container-ini {
+    flex: 1;
+}
+
+body.dados-carregados .info-card-ini {
+    align-items: flex-start;
+    text-align: left;
+}
+
+body.dados-carregados .info-card-ini p {
+    display: flex;
+}
+
+body.dados-carregados .info-card-ini img {
+    display: none;
+}
+
+body.dados-carregados .icon-btn {
+    display: flex;
+}
+
+.side-panel-ini .icon-btn {
+    margin-top: auto;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;
+    display: none;
+}
+
+.icon-btn img {
+    width: 50px;
+}
+
+body.dados-carregados #backGraph {
+    display: flex;
+}
+
+#backGraph {
+    transform: rotate(90deg);
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;margin-left: auto;
+    display: none;
 }
