--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -70,7 +70,7 @@ main {
 
 #map {
     width: 95%;
-    height: 690px;
+    height: 95%;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     transition: height 0.6s ease;
@@ -160,7 +160,7 @@ body.dados-carregados .info-card-ini img {
     display: none;
 }
 
-body.dados-carregados .icon-btn {
+body.slideBtn .icon-btn {
     display: flex;
 }
 
@@ -178,7 +178,7 @@ body.dados-carregados .icon-btn {
     width: 50px;
 }
 
-body.dados-carregados #backGraph {
+body.slideBtn #backGraph {
     display: flex;
 }
 
