--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -96,6 +96,10 @@ body.grafico-ativo #graficoContainer {
     display: block;
 }
 
+body.grafico-ativo #backGraph {
+    transform: rotate(90deg);
+}
+
 .side-panel-ini {
     flex: 1;
     background-color: #f5f5f5;
@@ -183,11 +187,12 @@ body.slideBtn #backGraph {
 }
 
 #backGraph {
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
     background: none;
     border: none;
     cursor: pointer;
     padding: 5px;
     border-radius: 5px;margin-left: auto;
     display: none;
+    transition: all 0.3s ease;
 }
