--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -100,6 +100,15 @@ body.grafico-ativo #backGraph {
     transform: rotate(90deg);
 }
 
+#backMap {
+    transform: rotate(0deg);
+    transition: transform 0.4s ease;
+}
+
+body.hideSide #backMap {
+    transform: rotate(180deg);
+}
+
 .side-panel-ini {
     flex: 1;
     background-color: #f5f5f5;
